# hydride

./: .gitignore  CONTRIB.rst  LICENSE.rst  README.md  README.rst  prot_variants.msgpack  pyproject.toml  setup.py
.github/workflows/: build.yml  test.yml  test_and_deploy.yml
doc/: api.rst  cli.rst  conf.py  example_structure.py  index.rst  intro.rst  issues.rst  theory.rst
doc/figure_scripts/: api.py  cover_structure.py  fragments.py  rotation_freedom.py  util.py
doc/figure_scripts/molecules/: benzene.sdf  isobutylene.sdf  propane.sdf  toluene.sdf
doc/static/: hydride.css
src/hydride/: __init__.py  add.py  charge.py  cli.py  fragments.py  library.py  names.py  relax.py  relax.pyx
tests/: conftest.py  test_add.py  test_charge.py  test_cli.py  test_fragments.py  test_names.py  test_relax.py  util.py
tests/data/: 2rtg.bcif  2rtg.mmtf  TYR.mol  TYR.sdf
