[project]
name = "hydride"
authors = [
    {name = "The 'Hydride' contributors"},
]
description = "Adding hydrogen atoms to molecular models"
readme = "README.rst"
requires-python = ">=3.10"
license = {file = "LICENSE.rst"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
    "biotite >= 0.40",
    "numpy >= 1.25",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
  "pytest",
]
lint = [
    "ruff==0.5.2",
]

[project.urls]
homepage = "https://hydride.biotite-python.org"
repository = "https://github.com/biotite-dev/hydride"
documentation = "https://hydride.biotite-python.org"

[tool.ruff.lint]
# pyflakes, pycodestyle isort and varibale naming
select = ["F", "E", "W", "I", "TID", "N"]
ignore = [
    # In docstrings long lines are often intentional
    # Most other ocassions are caught by the ruff formatter
    "E501",
    # Due to constants and class placeholders defined in functions
    "N806",
    # Due to `pyximport` before other imports
    "E402",
]

[tool.ruff.lint.per-file-ignores]
# Due to `from .module import *` imports in `__init__.py` modules
"__init__.py" = ["F403", "TID252"]
# Due to imports in each code snipped
"doc/figure_scripts/api.py" = ["E402"]

[tool.ruff.lint.flake8-tidy-imports]
# Relative imports are required to be able to import the package during setup
# for building the fragment library
ban-relative-imports = "parents"

[tool.ruff.lint.isort]
# No separator lines between import sections
no-lines-before = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
order-by-type = true
known-first-party = ["hydride"]

[project.scripts]
hydride = "hydride.cli:main"

[build-system]
# Minimum requirements for the build system to execute.
requires = [
    "setuptools >= 0.30",
    "wheel >= 0.30",
    "biotite >= 1.0",
    "numpy >= 2.0",
    "msgpack >= 0.5.6",
    "cython >= 3.0",
]
